--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,10 +1,7 @@
 name: E2E Testes Robot
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:        
+  workflow_dispatch:
+
 jobs:
   test:
     timeout-minutes: 60
@@ -13,10 +10,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v5
 
-    - name: Install Node.js
+    - name: Install Node
       uses: actions/setup-node@v4
       with:
-        node-version: '22'
+        node-version: 22
         cache: 'npm'
 
     - name: Install dependencies WebApp
@@ -25,9 +22,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
-        python-version: '3.14'
+        python-version: '3.13'
 
-    - name: Install dependencies Testes
+    - name: Install dependencies Tests
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -40,8 +37,8 @@ jobs:
       env:
         CI: true
 
-    - name: Wait for WebApp to be ready
-      run: npx wait-on http://localhost:3000  --timeout=60000
+    - name: Wait for WebApp
+      run: npx wait-on http://localhost:3000 --timeout=60000
 
     - name: Run E2E Tests Robot Framework
       run: robot -d ./logs robot/tests/
