--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -41,7 +41,7 @@ jobs:
       run: npx wait-on http://localhost:3000 --timeout=60000
 
     - name: Run E2E Tests Robot Framework
-      run: robot -d ./logs robot/tests/
+      run: robot -d ./logs robot/tests
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v4
