--- a/.github/workflows/e2e-testes-robot.yml
+++ b/.github/workflows/e2e-testes-robot.yml
@@ -1,11 +1,7 @@
 name: E2E Testes Robot
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
-    
+
 jobs:
   test:
     timeout-minutes: 60
@@ -13,18 +9,43 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
+
+    - name: Install Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22
+        cache: 'npm'
+
+    - name: Install dependencies WebApp
+      run: npm install
       
     - name: Set up Python
       uses: actions/setup-python@v6
       with:
         python-version: '3.13'
-    - name: Install dependencies
+
+    - name: Install dependencies Tests
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+    - name: Browser install lib init
+      run: rfbrowser init
+
+    - name: Run WeApp
+      run: npm start &
+      env:
+        CI: true
+
+    - name: Wait for WebApp
+      run: npx wait-on http://localhost:3000 --timeout=60000
+
+    - name: Run E2E Tests Robot Framework
+      run: robot -d ./logs robot/tests
+
+    - name: Publish Test Results
+      uses: actions/upload-artifact@v4
+      if: always()
       with:
-        name: playwright-traces
-        path: test-results/
+        name: robot-test-results
+        path: logs/
