--- a/.github/workflows/e2e-testes-robot.yml
+++ b/.github/workflows/e2e-testes-robot.yml
@@ -38,7 +38,7 @@ jobs:
         CI: true
 
     - name: Wait for WebApp
-      run: npx wait-on http://localhost:3000 --timeout=60000
+      run: npx wait-on http://localhost:3000 --timeout 60000
 
     - name: Run E2E Tests Robot Framework
       run: robot -d ./logs robot/tests
