--- a/.github/workflows/e2e-testes-robot.yml
+++ b/.github/workflows/e2e-testes-robot.yml
@@ -17,7 +17,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies WebApp
-      run: npm install
+      run: npm install -g wait-on
       
     - name: Set up Python
       uses: actions/setup-python@v6
@@ -33,12 +33,16 @@ jobs:
       run: rfbrowser init
 
     - name: Run WeApp
-      run: npm start &
+      run: npm start & 
+           sleep 15
       env:
         CI: true
+        
+    - name: Check if Port 3000 is active
+      run: netstat -tulpn | grep 3000 || echo "Porta 3000 não está ativa ainda"
 
     - name: Wait for WebApp
-      run: npx wait-on http://127.0.0.1:3000 --timeout 1200000
+      run: npx wait-on http://localhost:3000 --timeout 600000 --verbose
 
     - name: Run E2E Tests Robot Framework
       run: robot -d ./logs robot/tests
