--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Browser install lib init
       run: rfbrowser init
 
+    - name: Install Serve
+      run: npm install -g serve
+
     - name: Run WeApp
       run: npm start & 
            sleep 15
