--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,6 +1,11 @@
 name: E2E Testes Robot
 on:
   workflow_dispatch:
+    inputs:
+      browser:
+        description: 'Escolha o navegador para os testes (chromium, firefox, webkit)'
+        required: true
+        default: 'chromium'
 
 jobs:
   test:
@@ -48,11 +53,11 @@ jobs:
       run: npx wait-on http://localhost:3000 --timeout 600000 --verbose
 
     - name: Run E2E Tests Robot Framework
-      run: robot -d ./logs robot/tests
+      run: robot -d ./logs -v BROWSER:${{ github.event.inputs.browser }} robot/tests
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: robot-test-results
+        name: robot-test-results-${{ github.event.inputs.browser }}
         path: logs/
