--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -6,6 +6,10 @@ on:
         description: 'Escolha o navegador para os testes (chromium, firefox, webkit)'
         required: true
         default: 'chromium'
+      base_url:
+        description: 'Escolha o ambiente de testes (local, homolog, production)'
+        required: true
+        default: 'http://localhost:3000'
 
 jobs:
   test:
@@ -55,10 +59,10 @@ jobs:
       run: netstat -tulpn | grep 3000 || echo "Porta 3000 não está ativa ainda"
 
     - name: Wait for WebApp
-      run: npx wait-on http://localhost:3000 --timeout 600000 --verbose
+      run: npx wait-on ${{ github.event.inputs.base_url }} --timeout 600000 --verbose
 
     - name: Run E2E Tests Robot Framework
-      run: robot -d ./logs -v BROWSER:${{ github.event.inputs.browser }} robot/tests
+      run: robot -d ./logs -v BROWSER:${{ github.event.inputs.browser }} -v BASE_URL:${{ github.event.inputs.base_url }} robot/tests
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v4
